--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
 }
 
 .App-logo {
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,7 +32,42 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.news-card {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  margin-bottom: 1rem;
+
+}
+
+.news__body {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+
+.news__footer {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem 2rem;
+}
+
+.news__header {
+  display: flex;
+  justify-content: space-between;
+  margin: 0.5rem 0.2rem;
+}
+
+.news__bookmark-icon {
+  cursor: pointer;
+  background: none;
+  border: none;
+  display: flex;
 }
